# c-texteditor

./: .clang-format  CMakeLists.txt  CMakePresets.json
src/: kilo.c
